# MIPS_Emulator

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  TODO  arithmetic_instructions.cpp  beta  beta.cpp  bin_to_MIPS.cpp  branch_instructions.cpp  bubble.asm  cmake_install.cmake  cpu_register.cpp  data_instructions.cpp  demo.asm  emulador  emulator.cpp  logic_instructions.cpp  main  main.cpp  mips1.asm  output.txt  saida.txt  shift_instructions.cpp  syscalls.cpp  trabalho.drawio
tests/: mips1.asm  mips2.asm
